--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "utf16-lit-dependabot-fails"
 version = "0.1.0"
-authors = ["robin <robin@harfanglab.fr>"]
+authors = ["roblabla <unfiltered@roblab.la>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
